--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,28 @@
 
     {% load static %}
 
-    <!-- Bootstrap v5.0.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-          crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-          rel="stylesheet">
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180"
+              href={% static "images/fav/apple-touch-icon.png" %}>
+        <link rel="icon" type="image/png" sizes="32x32"
+              href={% static "images/fav/favicon-32x32.png" %}>
+        <link rel="icon" type="image/png" sizes="16x16"
+              href={% static "images/fav/favicon-16x16.png" %}>
+        <link rel="manifest" href={% static "images/fav/site.webmanifest" %}>
+        <link rel="mask-icon" href={% static "images/fav/safari-pinned-tab.svg" %} color="#269926">
+        <meta name="msapplication-TileColor" content="#269926">
+        <meta name="theme-color" content="#ffffff">
+
+        <!-- Bootstrap v5.0.1 -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+              crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+                crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+              rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
