--- a/templates/users/logged_out.html
+++ b/templates/users/logged_out.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <h3 class="text-center">Вы вышли!</h3>
-
+    <h5 class="mx-auto text-center mt-5 pt-5">Вы вышли!</h5>
 {% endblock %}
