--- a/templates/users/password_reset_complete.html
+++ b/templates/users/password_reset_complete.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <h3 class="text-center">Пароль успешно изменён!</h3>
-
+    <h5 class="mx-auto text-center mt-5 pt-5 w-75">Пароль успешно изменён!</h5>
 {% endblock %}
