--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -34,10 +34,13 @@
                 <input class="btn btn-apple mx-auto" type="submit" value="Изменить пароль"/>
             </form>
         </div>
-
     {% else %}
-        <h1>Смена пароля не выполнена</h1>
-        <p>Ссылка на смену пароля уже была использована. Повторите сброс пароля.</p>
+        <div class="mx-auto mt-5 pt-5 text-center w-75">
+            <h5>Смена пароля не выполнена</h5>
+            <p class="small">
+                Ссылка на смену пароля уже была использована. Повторите сброс пароля.
+            </p>
+        </div>
     {% endif %}
 
 {% endblock %}
