--- a/templates/users/password_reset_done.html
+++ b/templates/users/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <p class="text-center">Мы отправили письмо с инструкцией на вашу почту.</p>
-
+    <h5 class="mx-auto text-center mt-5 pt-5 w-75">
+        Мы отправили письмо с инструкцией на вашу почту.
+    </h5>
 {% endblock %}
