--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru" class="h-100">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}FooDate{% endblock %}</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}FooDate{% endblock %}</title>
 
-    {% load static %}
+        {% load static %}
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180"
@@ -29,18 +29,30 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
               rel="stylesheet">
 
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+        <!-- CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
-
-</head>
+    </head>
     <body class="h-100 d-flex flex-column">
-        {% include 'header.html' %}
-        <main class="w-75 mx-auto">
-            {% block content %}
-                Контента нет :(
-            {% endblock %}
-        </main>
-        {% include 'footer.html' %}
+        {% load user_agents %}
+        {% if request|is_mobile or request|is_tablet %}
+            {% include 'mobile_header.html' %}
+            <main class="mx-auto">
+        {% else %}
+            {% include 'header.html' %}
+            <main class="w-75 mx-auto">
+        {% endif %}
+
+        {% block content %}
+            Контента нет :(
+        {% endblock %}
+
+        {% if request|is_mobile or request|is_tablet %}
+            </main>
+            {% include 'mobile_footer.html' %}
+        {% else %}
+            </main>
+            {% include 'footer.html' %}
+        {% endif %}
     </body>
 </html>
