--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -5,49 +5,10 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="container-fluid">
-        <h2>Профиль</h2>
-        <hr>
-        <div class="mx-auto my-5">
-            <h4 class="mb-4">Личная информация</h4>
-
-            <form method="post" class="mb-4">
-                {% csrf_token %}
-                <div class="row mb-3">
-                    <div class="col-4">
-                        {{ form.email.label_tag }}
-                    </div>
-                    <div class="col-8">
-                        {{ form.email }}
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-4">
-                        {{ form.first_name.label_tag }}
-                    </div>
-                    <div class="col-8">
-                        {{ form.first_name }}
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-4">
-                        {{ form.last_name.label_tag }}
-                    </div>
-                    <div class="col-8">
-                        {{ form.last_name }}
-                    </div>
-                </div>
-                <div class="text-danger">
-                    {% for error in form.errors.values %}
-                        {{ error }}
-                    {% endfor %}
-                </div>
-                <input class="btn btn-outline-apple mx-auto" type="submit" value="Сохранить">
-            </form>
-            <a class="btn btn-outline-danger" href="/auth/password_change">Изменить пароль</a>
-            <a class="btn btn-danger" href="/auth/logout">Выйти</a>
-        </div>
-    </div>
-
+    {% load user_agents %}
+    {% if request|is_mobile or request|is_tablet %}
+        {% include 'users/mobile/profile.html' %}
+    {% else %}
+        {% include 'users/pc/profile.html' %}
+    {% endif %}
 {% endblock %}
