--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -5,64 +5,14 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="mt-5 mx-auto text-center form">
-        <h3 class="mb-5">Регистрация</h3>
-
-        <form method="post">
-            {% csrf_token %}
-            <div class="row mb-3">
-                <div class="col-2"></div>
-                <div class="col-1">
-                    Логин:
-                </div>
-                <div class="col-8">
-                    {{ form.username }}
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-2"></div>
-                <div class="col-1">
-                    {{ form.first_name.label_tag }}
-                </div>
-                <div class="col-8">
-                    {{ form.first_name }}
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-2"></div>
-                <div class="col-1">
-                    {{ form.last_name.label_tag }}
-                </div>
-                <div class="col-8">
-                    {{ form.last_name }}
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-2"></div>
-                <div class="col-1">
-                    {{ form.password.label_tag }}
-                </div>
-                <div class="col-8">
-                    {{ form.password }}
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-2"></div>
-                <div class="col-1">
-                    {{ form.password2.label_tag }}
-                </div>
-                <div class="col-8">
-                    {{ form.password2 }}
-                </div>
-            </div>
-            <div class="text-danger">
-                {% for error in form.errors.values %}
-                    {{ error }}
-                {% endfor %}
-            </div>
-            <input class="btn btn-apple mx-auto" type="submit" value="Зарегистрироваться"/>
-        </form>
-    </div>
-
+    {% load user_agents %}
+    {% if request|is_mobile or request|is_tablet %}
+        {% include 'users/mobile/signup.html' %}
+    {% else %}
+        {% include 'users/pc/signup.html' %}
+    {% endif %}
+    <p class="mx-auto text-center small text-secondary w-75">
+        Мы не хотим мучить Вас требованиями к паролю. Просто постарайтесь сделать его сложным,
+        от этого зависит безопасность Вашего аккаунта.
+    </p>
 {% endblock %}
