--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
         </a>
         <a class="nav-link" href="{% url 'home' host 'app' %}">Главная</a>
         {% if user.is_authenticated %}
-            {% if user.is_superuser %}
+            {% if user.is_staff %}
                 <a class="nav-link" href="{% url 'admin:index' host 'app' %}">
                     Панель администрирования
                 </a>
