Fixed password reset

--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -17,6 +17,9 @@
                         {{ form.new_password1 }}
                     </div>
                 </div>
+                <div class="row mb-3 text-danger">
+                    {{ form.new_password1.errors }}
+                </div>
                 <div class="row mb-3">
                     <div class="col"></div>
                     <div class="col-4">
@@ -26,11 +29,9 @@
                         {{ form.new_password2 }}
                     </div>
                 </div>
-                {% if form.errors %}
-                    <div class="row mb-3">
-                        <p class="text-danger">Введенные пароли не совпадают.</p>
-                    </div>
-                {% endif %}
+                <div class="row mb-3 text-danger">
+                    {{ form.new_password2.errors }}
+                </div>
                 <input class="btn btn-apple mx-auto" type="submit" value="Изменить пароль"/>
             </form>
         </div>
