--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,28 @@
+main {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 a {
     text-decoration: none !important;
 }
 
 a:hover {
     color: #269926;
+}
+
+.text-apple {
+  color: #008500;
+}
+
+a.text-apple:hover,
+a.text-apple:focus {
+  color: #269926;
+}
+
+.border-apple {
+    border-color: #269926;
 }
 
 .btn-apple {
@@ -14,8 +33,8 @@ a:hover {
 
 .btn-apple:hover {
     color: #fff;
-    background-color: #269926;
-    border-color: #269926;
+    background-color: #008500;
+    border-color: #008500;
 }
 
 .btn-outline-apple {
