--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             <main class="mx-auto">
         {% else %}
             {% include 'header.html' %}
-            <main class="w-75 mx-auto">
+            <main>
         {% endif %}
 
         {% block content %}
