--- a/static/css/mobile_header.css
+++ b/static/css/mobile_header.css
@@ -14,7 +14,7 @@
     color: #269926;
 }
 
-.list-group-item {
+.mobile-header-item {
     text-align: center;
     background-color: rgba(38, 153, 38, 0);
     border-color: white;
@@ -39,10 +39,10 @@ label .menu {
     right: -100px;
     top: -100px;
     z-index: 100;
-    width: 175px;
-    height: 165px;
+    width: 150px;
+    height: 145px;
     background: #269926;
-    border-radius: 50% 50% 50% 30%;
+    border-radius: 50% 50% 50% 20%;
     -webkit-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     box-shadow: 0 0 0 0 #269926, 0 0 0 0 #269926;
@@ -51,9 +51,9 @@ label .menu {
 
 label .hamburger {
     position: absolute;
-    top: 125px;
-    right: 120px;
-    width: 30px;
+    top: 118px;
+    right: 110px;
+    width: 25px;
     height: 2px;
     background: #ffffff;
     display: block;
@@ -75,11 +75,11 @@ label .hamburger:after, label .hamburger:before {
 }
 
 label .hamburger:before {
-    top: -10px;
+    top: -7px;
 }
 
 label .hamburger:after {
-    bottom: -10px;
+    bottom: -7px;
 }
 
 label input {
@@ -129,7 +129,6 @@ label a {
     display: block;
     color: white;
     text-decoration: none;
-    font-size: x-large !important;
 }
 
 label a:hover {
