--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
               rel="stylesheet">
 
+        <!-- JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+        <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 
     </head>
     <body class="h-100 d-flex flex-column">
