--- a/static/css/book/products.css
+++ b/static/css/book/products.css
@@ -2,8 +2,21 @@ main {
     width: 100%;
 }
 
+#productsAccordion > div {
+    position: sticky;
+    top: 10px;
+}
+
 #all-heading {
     background-color: rgba(112, 198, 112, 0.2);
+}
+
+.page-link {
+    color: #269926;
+}
+
+.page-link:hover {
+    color: #008500;
 }
 
 @media (max-device-width: 520px) {
