--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,37 @@
+main {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td {
+    vertical-align: middle;
+}
+
+tr > td:first-child {
+    text-align: left;
+}
+
 a {
     text-decoration: none !important;
+    color: black;
 }
 
 a:hover {
     color: #269926;
+}
+
+.text-apple {
+  color: #008500;
+}
+
+a.text-apple:hover,
+a.text-apple:focus {
+  color: #269926;
+}
+
+.border-apple {
+    border-color: #269926;
 }
 
 .btn-apple {
@@ -14,8 +42,8 @@ a:hover {
 
 .btn-apple:hover {
     color: #fff;
-    background-color: #269926;
-    border-color: #269926;
+    background-color: #008500;
+    border-color: #008500;
 }
 
 .btn-outline-apple {
@@ -56,6 +84,34 @@ a:hover {
     max-width: 50%;
 }
 
-.form-control {
-    border: none;
+.form-control:focus {
+    border-color: #269926;
+    box-shadow: none;
+}
+
+.btn:focus {
+    box-shadow: none;
+}
+
+.form-check-input {
+    border-color: #008500;
+}
+
+.form-check-input:checked {
+    border-color: #008500;
+    background-color: #008500;
+}
+
+.form-check-input:focus {
+    box-shadow: none;
+}
+
+.form-select:focus {
+    border-color: #269926;
+    box-shadow: none;
+}
+
+.page-link:focus {
+    box-shadow: none;
+    color: #008500;
 }
