Added error pages

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,16 @@
 <footer class="text-center mt-auto py-3">
     <hr>
     <div class="container">
-        <div>
-            <a class="btn btn-apple">
+        <div class="row">
+            <a class="btn btn-apple mx-auto" style="width: 30%">
                 FooDate project
+            </a>
+        </div>
+        <div class="row">
+            <a class="text-secondary small"
+               href="https://www.flaticon.com/free-icons/app"
+               title="app icons">
+                Some app icons created by Freepik - Flaticon
             </a>
         </div>
     </div>
