--- a/templates/book/product.html
+++ b/templates/book/product.html
@@ -18,7 +18,7 @@
                 <div class="col-6">
                     <div class="row d-flex align-items-center h-50">
                         <img src="{% uploads product.image %}" alt="{{ product.name }}"
-                         class="img-fluid product-img">
+                         class="img-fluid product-img w-auto">
                     </div>
                     <div class="row"></div>
                 </div>
