--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
+{% load user_agents %}
 
 {% block title %}
     Вход
 {% endblock %}
 
 {% block content %}
-    {% load user_agents %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/users/login.css' %}">
     {% if request|is_mobile or request|is_tablet %}
         {% include 'users/mobile/login.html' %}
     {% else %}
