--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load user_agents %}
 
 {% block title %}
     Регистрация
 {% endblock %}
 
 {% block content %}
-    {% load user_agents %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/users/signup.css' %}">
     {% if request|is_mobile or request|is_tablet %}
         {% include 'users/mobile/signup.html' %}
     {% else %}
